--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,7 @@
     <!--Auto generated ant build file-->
     <property environment="env"/>
     <property name="axis2.home" value="${env.AXIS2_HOME}"/>
+    <property name="apache.home" value="${env.APACHE_HOME}"/>
     <property name="project.base.dir" value="."/>
     <property name="maven.class.path" value=""/>
     <property name="name" value="ProfilerWebService"/>
@@ -110,10 +111,22 @@
     <target name="clean">
         <delete dir="${build}"/>
     </target>
+
+    <!-- custom -->
     <target name="config.file">
       <propertyfile file="${profiler.ini}"
                     comment="profiler.ini" >
         <entry key="backend_home" value="${backend.home}" />
       </propertyfile>
     </target>
+    <target name="start.apache">
+      <exec dir="." executable="${apache.home}/bin/startup.sh" />
+    </target>
+    <target name="deploy.config" depends="config.file">
+      <copy file="${profiler.ini}" toDir="${apache.home}/webapps/axis2/WEB-INF/conf" />
+    </target>
+    <target name="deploy.aar" depends="jar.server">
+      <copy file="${lib}/${name}.aar" todir="${apache.home}/webapps/axis2/WEB-INF/services" />
+    </target>
+    <target name="deploy" depends="deploy.config,deploy.aar,start.apache" />
 </project>
